fix: replace `getFirst()` with `get(0)` in resolver and tests for Java 17 compatibility